--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										
 									</div>
 									<span class="image object">
-										<img src="images/pic1.jpg" alt="" />
+										<img src="pic1.jpg" alt="" />
 									</span>
 								</section>
 
