--- a/elements.html
+++ b/elements.html
@@ -13,7 +13,15 @@
 		<link rel="stylesheet" href="paper-collapse-master/paper-collapse.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 		<link rel="icon" href="iitd_logo.jpg" type="image/x-icon">
-	</head>
+	    <style>
+		.container {
+		    max-width: 50rem;
+		    margin-right: auto;
+		    margin-left: auto;
+		    padding: 2rem;
+		}
+    	   </style>
+</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
