--- a/elements.html
+++ b/elements.html
@@ -203,7 +203,7 @@
 
 		
 							<!-- Section -->
-								section>
+								<section>
 									<header class="major">
 										<h2>Contact Me</h2>
 									</header>
