--- a/elements.html
+++ b/elements.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="../paper-collapse.min.css">
+		<link rel="stylesheet" href="paper-collapse-master/paper-collapse.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 		<link rel="icon" href="iitd_logo.jpg" type="image/x-icon">
 	    <style>
@@ -233,7 +233,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="../paper-collapse.min.js"></script>
+			<script src="paper-collapse-master/paper-collapse.min.js"></script>
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script>
     			$('.collapse-card').paperCollapse();
