--- a/elements.html
+++ b/elements.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="paper-collapse-master/paper-collapse.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<link rel="icon" href="iitd_logo.jpg" type="image/x-icon">
 	    <style>
 		.container {
