--- a/elements.html
+++ b/elements.html
@@ -10,19 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="paper-collapse-master/paper-collapse.min.css">
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<link rel="icon" href="iitd_logo.jpg" type="image/x-icon">
-	    <style>
-		.container {
-		    max-width: 50rem;
-		    margin-right: auto;
-		    margin-left: auto;
-		    padding: 2rem;
+	</head>
+	<style >
+		.box {
+			background-color: lightblue
 		}
-    	   </style>
-</head>
+	</style>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -54,16 +48,11 @@
 									<!-- Content -->
 							        <br/>
 							        <br/>
-							         <div class="container">
-								         <div class="collapse-card">
-								            <div class="collapse-card__heading">
-								                <h2 class="collapse-card__title">
-								                    <i class="fa fa-home" aria-hidden="true"></i>     
-
+							         <div class="box">
+								                <i class="fa fa-home" aria-hidden="true"></i>     
+								                <h2>
 														House Prices: Advanced Regression Techniques
 								                </h2>
-								            </div>
-								            <div class="collapse-card__body">
 								            	<img src="housesbanner.png" alt="Site Logo" width="800" height="100">
 								                <p>Applied various regression algorithms to accurately predict the price of houses. <a href="https://www.kaggle.com/c/house-prices-advanced-regression-techniques">Problem Statement</a>
 								                	<br>
@@ -77,25 +66,15 @@
 												<b> The best accuracy was obtained using Gradient Boosting Regression and the obtained Root Mean Squared Logarithmic Error(RMSLE) over the test cases was 0.14065</b>
 												<a href="https://github.com/amangupt01/House_price_regressor">Click Here For Code</a>
 												</p>
-								                <div class="collapse-card__close_handler mt1 align-right mouse-pointer">
-								                    Show less <i class="fa fa-chevron-up"></i>
-								                </div>
-								            </div>
-								        </div>
 								    </div>
 
 								<br/>
-							         <div class="container">
-								         <div class="collapse-card">
-								            <div class="collapse-card__heading">
-								                <h2 class="collapse-card__title">
-								                   <i class="fa fa-ship" aria-hidden="true"></i>    
-
+							        <div class="box">
+								         
+								                 <i class="fa fa-ship" aria-hidden="true"></i>    
+								                <h2>
 													Titanic: Machine Learning from Disaster
-								                </h2>
-								            </div>
-								            <div class="collapse-card__body">
-
+								                </h2>								          
 								                <p>Applied various classification algorithms to accurately predict whether a person with given features survived the Titanic boat. <a href="https://www.kaggle.com/c/titanic/overview">Problem Statement</a>
 								                	<br>
 								                <h3>List of algorithms applied :</h3>
@@ -106,26 +85,15 @@
 													</ul>
 												<b> The best accuracy was obtained using Random Forest Classifier and the obtained Categorisation Accuracy over the test cases was 77.511%</b>
 												<a href="https://github.com/amangupt01/Titanic_Survivor_Classifier">Click Here For Code</a>
-												</p>
-								                <div class="collapse-card__close_handler mt1 align-right mouse-pointer">
-								                    Show less <i class="fa fa-chevron-up"></i>
-								                </div>
-								            </div>
-								        </div>
+												</p>							           
 								    </div>
 
 								<br/>
-							         <div class="container">
-								         <div class="collapse-card">
-								            <div class="collapse-card__heading">
-								                <h1 class="collapse-card__title">
+							        <div class="box">								         
 								                    <i class="fas fa-code"></i>   
-
+								                <h2>
 														Binary search Tree and Image Editor
-								                </h1>
-								            </div>
-								            <div class="collapse-card__body">
-								            	
+								                </h2>
 								                <p>Implemented Binary search Tree and build an Image editor <a href="COL100 Assignment.pdf">Problem Statement</a>
 								                	<br>
 								                <h3>Part 1: Binary Search Tree</h3>
@@ -167,11 +135,6 @@
 														<figcaption>Least Energy path found by the Editor</figcaption>
 													</figure>
 												</div>
-								                <div class="collapse-card__close_handler mt1 align-right mouse-pointer">
-								                    Show less <i class="fa fa-chevron-up"></i>
-								                </div>
-								            </div>
-								        </div>
 								    </div>
 
 					</section>
@@ -204,7 +167,7 @@
 
 		
 							<!-- Section -->
-								<section>
+								section>
 									<header class="major">
 										<h2>Contact Me</h2>
 									</header>
@@ -234,10 +197,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="paper-collapse-master/paper-collapse.min.js"></script>
-			<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<script>
-    			$('.collapse-card').paperCollapse();
-		</script>
+			
 	</body>
 </html>
