--- a/elements.html
+++ b/elements.html
@@ -172,7 +172,7 @@
 										<h2>Contact Me</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mailto:mt1190673@iitd.ac.in">mt1190673@iitd.ac.in</a><br /><a href="mailto:amangupt01@gmail.com">amangupt01@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:cs1190673@iitd.ac.in">cs1190673@iitd.ac.in</a><br /><a href="mailto:amangupt01@gmail.com">amangupt01@gmail.com</a></li>
 										<li class="icon solid fa-phone">+91-7410084368</li>
 										<li class="icon solid fa-home">Vindhyachal Hostel<br />
 										IIT Delhi, Haus Khaz-110016<br />New Delhi<br />India</li>
