--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
 										<header>
 											<h1>Hi, I’m Aman <br />
 											</h1>
-											<p>I am an undergraduate pursuing my Bachelors in <a href="http://maths.iitd.ac.in/drupal/">Maths and Computing</a> at IIT Delhi</p>
+											<p>I am a final year undergrad pursuing my Bachelors in <a href="https://www.cse.iitd.ernet.in/">Computer Science and Engineering</a> at IIT Delhi</p>
+											<p>My hobbies include watching sports, binge-watching TV series, trying different food cuisines, and chilling out with my friends.</p>
 										</header>
-										
-										
 									</div>
 									<span class="image object">
-										<img src="pic1.jpg" alt="" />
+										<img src="pic2.jpg" alt="" />
 									</span>
 								</section>
 
@@ -86,7 +85,7 @@
 										<h2>Contact Me</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mailto:mt1190673@iitd.ac.in">mt1190673@iitd.ac.in</a><br /><a href="mailto:amangupt01@gmail.com">amangupt01@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:cs1190673@iitd.ac.in">cs1190673@iitd.ac.in</a><br /><a href="mailto:amangupt01@gmail.com">amangupt01@gmail.com</a></li>
 										<li class="icon solid fa-phone">+91-7410084368</li>
 										<li class="icon solid fa-home">Vindhyachal Hostel<br />
 										IIT Delhi, Haus Khaz-110016<br />New Delhi<br />India</li>
